public class Tiger extends WildAnimal{

}
